Options view updated

--- a/css/options.css
+++ b/css/options.css
@@ -9,8 +9,9 @@ body {
 	overflow: auto;
 }
 
-#horn_volume {
-	display: inherit;
+.range_output {
+	display: inline-block;
+	padding-top: 0;
 }
 
 .alert-success.text-center {
@@ -18,6 +19,70 @@ body {
 	width: 100%;
 }
 
-#tsitu_loader_offset {
+.full_width {
 	width: 100%;
+}
+
+/* Toggles */
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 2.5em;
+  height: 1.5em;
+}
+
+.switch_label {
+    vertical-align: top;
+}
+
+/* Hide default HTML checkbox */
+.switch input {display:none;}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 1em;
+  width: 1em;
+  left: 0.25em;
+  bottom: 0.25em;
+  background-color: white;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+input:checked + .slider {
+  background-color: #337ab7;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #337ab7;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(1em);
+  -ms-transform: translateX(1em);
+  transform: translateX(1em);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 1.5em;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
