--- a/src/css/options.css
+++ b/src/css/options.css
@@ -1,7 +1,3 @@
-body {
-	/* min-width: 400px; */
-}
-
 .container.well {
 	background-color: #bbb;
 	margin-bottom: 0;
@@ -37,7 +33,9 @@ body {
 }
 
 /* Hide default HTML checkbox */
-.switch input {display:none;}
+.switch input {
+  display: none;
+}
 
 /* The slider */
 .slider {
