--- a/src/css/options.css
+++ b/src/css/options.css
@@ -10,6 +10,10 @@
 	padding-top: 0;
 }
 
+.input_range {
+  accent-color: #337ab7;
+}
+
 .alert-success.text-center {
 	visibility: hidden;
 	width: 100%;
