Fixing hover and moving options to gear icon

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -12,6 +12,12 @@
     color: black;
     white-space: nowrap;
 }
+td {
+    background-color: white;
+}
+td:hover {
+    background-color: goldenrod;
+}
 
 .error_popup {
     display: none;
