--- a/src/css/user-notify.css
+++ b/src/css/user-notify.css
@@ -1,82 +1,96 @@
-@supports (-webkit-user-select: none) {
-  /* 
-    Chrome injected CSS is at the user level and not the author level like FF so !important is needed b/c the 
-    page CSS will have priority otherwise
-  */
-  .huntersHornMessageView--mhct_success {
-    border-image-source: url("chrome-extension://__MSG_@@extension_id__/images/sandwich-board-success.png") !important;
-  }
-  .huntersHornMessageView--mhct_warning {
-    border-image-source: url("chrome-extension://__MSG_@@extension_id__/images/sandwich-board-warning.png") !important;
-  }
-  .huntersHornMessageView--mhct_error {
-    border-image-source: url("chrome-extension://__MSG_@@extension_id__/images/sandwich-board-error.png") !important;
-  }
-
-  .huntersHornMessageView--mhct_success .huntersHornMessageView__content::before,
-  .huntersHornMessageView--mhct_warning .huntersHornMessageView__content::before,
-  .huntersHornMessageView--mhct_error .huntersHornMessageView__content::before {
-    background-image: url("chrome-extension://__MSG_@@extension_id__/images/icon64.png");
-  }
+/* 
+  Chrome injected CSS is at the user level and not the author level like FF so !important is needed b/c the 
+  page CSS will have priority otherwise
+*/
+.huntersHornMessageView--mhct_success {
+  border-image-source: url("chrome-extension://__MSG_@@extension_id__/images/sandwich-board-success.png") !important;
 }
-@supports (-moz-user-select: none) {
+.huntersHornMessageView--mhct_warning {
+  border-image-source: url("chrome-extension://__MSG_@@extension_id__/images/sandwich-board-warning.png") !important;
+}
+.huntersHornMessageView--mhct_error {
+  border-image-source: url("chrome-extension://__MSG_@@extension_id__/images/sandwich-board-error.png") !important;
+}
+
+.huntersHornMessageView--mhct_success
+  .huntersHornMessageView__content::before,
+.huntersHornMessageView--mhct_warning
+  .huntersHornMessageView__content::before,
+.huntersHornMessageView--mhct_error .huntersHornMessageView__content::before {
+  background-image: url("chrome-extension://__MSG_@@extension_id__/images/icon64.png") !important;
+}
+
+@-moz-document url-prefix() {
   .huntersHornMessageView--mhct_success {
-    border-image-source: url("moz-extension://__MSG_@@extension_id__/images/sandwich-board-success.png");
+    border-image-source: url("moz-extension://__MSG_@@extension_id__/images/sandwich-board-success.png") !important;
   }
   .huntersHornMessageView--mhct_warning {
-    border-image-source: url("moz-extension://__MSG_@@extension_id__/images/sandwich-board-warning.png");
+    border-image-source: url("moz-extension://__MSG_@@extension_id__/images/sandwich-board-warning.png") !important;
   }
   .huntersHornMessageView--mhct_error {
-    border-image-source: url("moz-extension://__MSG_@@extension_id__/images/sandwich-board-error.png");
+    border-image-source: url("moz-extension://__MSG_@@extension_id__/images/sandwich-board-error.png") !important;
   }
 
-  .huntersHornMessageView--mhct_success .huntersHornMessageView__content::before,
-  .huntersHornMessageView--mhct_warning .huntersHornMessageView__content::before,
+  .huntersHornMessageView--mhct_success
+    .huntersHornMessageView__content::before,
+  .huntersHornMessageView--mhct_warning
+    .huntersHornMessageView__content::before,
   .huntersHornMessageView--mhct_error .huntersHornMessageView__content::before {
-    background-image: url("moz-extension://__MSG_@@extension_id__/images/icon64.png");
+    background-image: url("moz-extension://__MSG_@@extension_id__/images/icon64.png") !important;
   }
 }
 
 .huntersHornMessageView--mhct_success .huntersHornMessageView__content:before,
 .huntersHornMessageView--mhct_warning .huntersHornMessageView__content:before,
 .huntersHornMessageView--mhct_error .huntersHornMessageView__content:before {
-    content: '';
-    display: block;
-    width: 63px;
-    height: 40px;
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    background-size: contain
+  content: "";
+  display: block;
+  width: 63px;
+  height: 40px;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: contain;
 }
 
-.mhct-banner {
-  z-index: 100;
-  position: fixed;
-  top: 0;
-  padding: 1em;
+.mhct-msg-display {
+  box-shadow: 0px 1px 3px -1px black;
   font-size: larger;
-  width: 100%;
-  text-align: center;
-  box-shadow: 0px 1px 4px 0px black;
   opacity: 0%;
+  padding: 1em;
   pointer-events: none;
+  position: fixed;
+  text-align: center;
+  transition: all 0.4s;
+  z-index: 100;
+}
+
+.mhct-msg-display.mhct-banner {
   font-weight: 600;
-  transition: all .4s;
+  top: 0;
+  width: 100%;
 }
 
-.mhct-banner--active {
-  opacity: 95%;
+.mhct-msg-display.mhct-toast {
+  border-radius: 10px;
+  font-weight: 400;
+  bottom: 10px;
+  right: 10px;
+  width: auto;
 }
 
-.mhct-banner-success {
+.mhct-msg-display--active {
+  opacity: 1;
+}
+
+.mhct-msg-display.mhct-success {
   background: lightgreen;
   border: 1px solid green;
 }
-.mhct-banner-error {
+.mhct-msg-display.mhct-error {
   background: pink;
   border: 1px solid red;
 }
-.mhct-banner-warning {
+.mhct-msg-display.mhct-warning {
   background: gold;
   border: 1px solid darkgoldenrod;
 }
