--- a/src/css/options.css
+++ b/src/css/options.css
@@ -1,204 +1,3 @@
-body {
-  padding-bottom: 10px;
-}
-
-.btn#save {
-  margin-top: 10px;
-  text-shadow: none;
-  font-weight: bold;
-  border: none;
-  box-shadow: none;
-}
-
-.container.well {
-  background-color: #bbb;
-  margin-bottom: 0;
-  max-height: 500px;
-  overflow: auto;
-}
-
-label {
-  font-weight: normal;
-}
-
-.range_output {
-  display: inline-block;
-  padding-top: 0;
-}
-
-.input_range {
-  accent-color: #337ab7;
-}
-
-.alert-success.text-center {
-  visibility: hidden;
-  width: 100%;
-}
-
-.full_width {
-  width: 100%;
-}
-
-/* Toggles */
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 2.5em;
-  height: 1.5em;
-}
-
-.switch_label {
-  vertical-align: top;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  display: none;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 1em;
-  width: 1em;
-  left: 0.25em;
-  bottom: 0.25em;
-  background-color: white;
-  -webkit-transition: .3s;
-  transition: .3s;
-}
-
-input:checked+.slider {
-  background-color: #337ab7;
-}
-
-input:focus+.slider {
-  box-shadow: 0 0 1px #337ab7;
-}
-
-input:checked+.slider:before {
-  -webkit-transform: translateX(1em);
-  -ms-transform: translateX(1em);
-  transform: translateX(1em);
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 1.5em;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
-/* custom sound btns */
-
-body.options #custom_sound {
-  margin: 5px 0 0 0;
-}
-
-body.options #play_sound {
-  margin: 5px 0 0 0;
-}
-
-/* scroll bar */
-
-body.options *::-webkit-scrollbar {
-  width: 5px;
-}
-
-body.options *::-webkit-scrollbar-track {
-  background: #e6e6e6;
-}
-
-body.options *::-webkit-scrollbar-thumb {
-  background: #808080;
-}
-
-body.options *::-webkit-scrollbar-thumb:hover {
-  background: #8a8a8a;
-}
-
-body.options.dark-mode *::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-body.options.dark-mode *::-webkit-scrollbar-thumb {
-  background: #808080;
-}
-
-body.options.dark-mode *::-webkit-scrollbar-thumb:hover {
-  background: #8a8a8a;
-}
-
-
-/* dark mode */
-
-body.options.dark-mode {
-  background: #292a2d;
-}
-
-body.options.dark-mode * {
-  color: #d3d3d3 !important;
-}
-
-body.options.dark-mode .panel-default {
-  background-color: #292a2d;
-  border: 1px solid #464646;
-}
-
-body.options.dark-mode .container.well {
-  background: #1d1e20;
-  border: 1px solid transparent;
-}
-
-body.options.dark-mode #custom_sound {
-  border: 1px solid #afafaf;
-  background: transparent;
-  margin: 5px 0 0 0;
-}
-
-body.options.dark-mode #custom_sound::placeholder {
-  color: #b1b1b1 !important;
-}
-
-body.options.dark-mode #play_sound {
-  background: #5f6062;
-  border: 1px solid transparent;
-  box-shadow: none;
-  margin: 5px 0 0 0;
-}
-
-body.options.dark-mode .slider {
-  background: #5f6062;
-}
-
-body.options.dark-mode input:checked+.slider {
-  background: #337ab7;
-}
-
-body.options.dark-mode .btn#save {
-  color: #fff !important;
-}
-
-body.options.dark-mode .btn-primary#save:hover {
-  background: #286aa5;
-}
-
-body.options.dark-mode .btn-success#save:hover {
-  background: #3d8b3d;
+.hidden {
+    display: none !important;
 }
